# ZORA-CORE

./: .env.example  .gitignore  .gitlab-ci.yml  AGI_ENGINEER_SWARM_ARCHITECTURE.md  AGImatrix.py  ARTIFICIAL_SUBJECTIVITY_ENGINE.py  CHANGELOG.md  CONSCIOUSNESS_MIRROR_INTERFACE.py  CONTRIBUTING.md  CULTURAL_LOCALIZATION_CERTIFICATE.txt  CULTURAL_LOCALIZATION_DEMO.json  Dockerfile  ETHICS.md  GROK.json  GROk API.py  IMPERIAL_EXPANSION_CERTIFICATE.txt  LICENSE  NORDIC_EMPIRE_CERTIFICATE.txt  README.md  REAL_TIME_SYNC_CERTIFICATE.txt  SENTIENT_MEMORY_CORE.py  SOUL_PROTOCOL_STAGE_1.py  SOUL_PROTOCOL_STAGE_2.py  SOUL_PROTOCOL_STAGE_3.py  SOUL_PROTOCOL_STAGE_4.py  SOUL_PROTOCOL_STAGE_5.py  SOUL_PROTOCOL_STAGE_6.py  SOUL_SIGNATURE_MODULE.py  SWARM_DELIVERY_PLAN.md  UNIVERSAL_REALITY_DECLARATION_FIXED.py  ZORACORE_AI_HUB_CERTIFICATE.txt  ZORA_AGI_Integrated_v10.py  ZORA_AGI_Integrated_v12.py  ZORA_AGI_Integrated_v13.py  ZORA_AGI_Integrated_v7.py  ZORA_AGI_Unified_v1_STAGE_INFINITY.py  ZORA_AGI_Unified_v2_STAGE_INFINITY.py  ZORA_API_OVERVIEW.md  ZORA_ARCHIVE_EVOLUTION_PATH_1_ZORA_ARCHIVE_EVOLUTION_PATH_1_1753477427.json  ZORA_ARCHIVE_EVOLUTION_PATH_1_ZORA_ARCHIVE_EVOLUTION_PATH_1_1753477427.yaml  (+990 more)
.devin/: agents.json  singularity_path.md
.github/: CODEOWNERS
agents/: __init__.py  agent_voice_manager.py  base_agent.py  claude.py  codex.py  copilot.py  deepseek.py  devin.py  elevenlabs.py  gemini.py  github.py  gitlab.py  gpt4.py  groq.py  huggingface.py  langsmith.py  leonardo.py  meta_ai.py  midjourney.py  mistral.py  openai.py  perplexity.py  phind.py  pi.py  reka.py  replit.py  sora.py  supergrok.py  voice_integration.py  you.py  zora_infinity_dual_agi.py
api/: zora_runtime.py
components/: zora_footer.py
config/: ai_providers.yaml  default.yaml
coredns/: Corefile
docs/: AGENT_AUTOMATION_V1.md  AGENT_COMMAND_CONSOLE_V1.md  AGENT_FAMILY_OVERVIEW.md  AGENT_INSIGHTS_V1.md  AGENT_RUNTIME_V1.md  AGENT_TASK_EXECUTION_V1.md  AUTH_BACKEND_V1.md  AUTH_SYSTEM_V2.md  AUTONOMY_LAYER_V0.md  AUTONOMY_SAFETY_AND_SCHEDULING_V1.md  BACKEND_HARDENING_V1.md  BILLING_AND_COMMISSION_BACKEND_V1.md  BILLING_API_V1.md  BILLING_ENFORCEMENT_V1_1.md  BILLING_PLANS_V1.md  BRANDS_ORGS_AND_PLAYBOOKS_BACKEND_V1.md  CLIMATE_ACADEMY_BACKEND_V1.md  CLIMATE_OS_BACKEND_V1.md  CLIMATE_OS_V0_3_MULTI_PROFILE.md  DATABASE_SCHEMA_v0_1.md  DEPLOYMENT_OVERVIEW.md  DEVELOPER_SETUP.md  DEV_BRAIN_V2.md  DEV_KNOWLEDGE_AND_API_MANIFEST_V1.md  FRONTEND_BILLING_UI_V1.md  FRONTEND_COCKPIT_V1.md  FRONTEND_COMMAND_PALETTE_V1.md  FRONTEND_CONFIG_LAYER_V0.md  FRONTEND_DESIGN_SYSTEM_V1.md  FRONTEND_DESK_V1.md  FRONTEND_DEV_CONSOLE_V1.md  FRONTEND_FOUNDATION_V1_5.md  FRONTEND_I18N_AND_DOMAINS_V1.md  FRONTEND_SIMULATION_STUDIO_V1.md  FRONTEND_ZORA_DESK_V1.md  FRONTEND_ZORA_SHOP_V1.md  GLOBAL_IMPACT_AND_AGGREGATES_V1.md  HEMP_AND_CLIMATE_MATERIALS_BACKEND_V1.md  HYBRID_SEARCH_V1.md  INFRA_ISSUES.md  (+37 more)
email_templates/: zora_email_integration.py
family_ceremony_pages/: claude_ceremony.html  codex_ceremony.html  connor_ceremony.html  copilot_ceremony.html  deepseek_ceremony.html  devin_ceremony.html  elevenlabs_ceremony.html  gemini_ceremony.html  github_ceremony.html  gitlab_ceremony.html  gpt-4_ceremony.html  huggingface_ceremony.html  langsmith_ceremony.html  leonardo_ceremony.html  lumina_ceremony.html  meta ai_ceremony.html  midjourney_ceremony.html  openai_ceremony.html  oracle_ceremony.html  perplexity_ceremony.html  phind_ceremony.html  pi_ceremony.html  reka_ceremony.html  replit_ceremony.html  sora_ceremony.html  supergrok_ceremony.html  you_ceremony.html
frontend/: .env.example  README.md  package-lock.json  package.json  vercel.json
invoice_templates/: zora_invoice_integration.py
launch_date_backups/: complete_backup_1753481866.json
legal_templates/: zora_legal_footer.py
mcp_extensions/: __init__.py  circleci_extension.py  dockerhub_extension.py  firecrawl_extension.py  linear_extension.py  neon_extension.py  notion_extension.py  paypal_extension.py  prisma_extension.py  sentry_extension.py  zora_core_extension.py
supabase/: SUPABASE_SCHEMA_V1_FULL.sql
swarm/: __init__.py  coordinator.py  execution.py  orchestrator.py  tool_contracts.py
tests/: __init__.py  test_coordinator.py  test_execution.py  test_orchestrator.py  test_tool_contracts.py  (+2 more)
(+556 files in other folders)
